--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>PawMatch</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;900&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- FontAwesome -->
+  <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
+
+  <!-- Ваш CSS -->
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="#">PawMatch</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<section id="title" class="py-5">
+  <div class="container">
+    <div class="row align-items-center">
+      
+      <!-- Левая колонка: текст и кнопки -->
+      <div class="col-lg-6">
+        <h1>Meet new and adorable dogs</h1>
+        <p>Find your perfect furry friend today!</p>
+        <button class="btn btn-dark btn-lg download-button">
+          <i class="fa-brands fa-apple"></i> Download
+        </button>
+        <button class="btn btn-outline-light btn-lg download-button">
+          <i class="fa-brands fa-google-play"></i> Download
+        </button>
+      </div>
+
+      <!-- Правая колонка: картинка телефона -->
+      <div class="col-lg-6 text-center">
+        <img src="images/phone.png" alt="Phone" class="title-image">
+      </div>
+
+    </div>
+  </div>
+</section>
+
+</body>
+</html>
 
