--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>PawMatch</title>
+<img src="images/cloud1.png" class="cloud-left">
+<img src="images/cloud2.png" class="cloud-right">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +37,8 @@
 <section id="title" class="py-5">
   <div class="container">
     <div class="row align-items-center">
-      
+      <img src="images/mountains.png" alt="Mountains" class="mountains">
+
       <!-- Левая колонка: текст и кнопки -->
       <div class="col-lg-6">
         <h1>Meet new and adorable dogs</h1>
